Add week 4 cohort 2 code